fix some layout issues

--- a/styles/movies.css
+++ b/styles/movies.css
@@ -66,7 +66,7 @@
 .movie-review {
     overflow: hidden;
     text-overflow: ellipsis;
-    text-align: justify;
+    text-align: left;
     height: calc(90px + 0.5vw);
 }
 
@@ -77,13 +77,13 @@
 .rating-icon {
     padding-left: 2%;
     padding-right: 2%;
-    font-size: calc(27px + .1vw);
+    font-size: calc(20px + .1vw);
 }
 
 .rating-fire {
     padding-left: 3%;
     padding-right: 3%;
-    font-size: calc(30px + .1vw);
+    font-size: calc(23px + .1vw);
     color: #ff9100;
 }
 
